[package]
name = "libhentai"
version = "0.1.0"
authors = ["Adenosie <adenosiez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "net", "macros"] }
tokio-native-tls = "0.3"
tokio-rustls = "0.22"
webpki-roots = "0.21"

hyper = { version = "0.14", features = ["client", "http1", "http2"] }
