[package]
name = "lude"
version = "0.1.0"
authors = ["Adenosie <adenosiez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "net", "macros"] }

hyper = { version = "0.14", features = ["client", "tcp", "http1", "http2"] }
detour = { git = "https://github.com/adenosie/detour" }
select = "0.5"
